# demo

./: .gitignore  README.md
Antlr4.0Book/01_Hello/: pom.xml
Antlr4.0Book/Antlr4.0BookJava/: pom.xml
C++相关/: CMakeLists.txt
C++相关/101_HelloWorld/: CMakeLists.txt  main.cpp
C++相关/104_变量/: main.cpp
C++相关/104_数组/: CMakeLists.txt  main.cpp
C++相关/105_数组/: CMakeLists.txt  main.cpp
C++相关/106_常用语句/: CMakeLists.txt  main.cpp
C++相关/基础语法/基础语法/: CMakeLists.txt  CMakePresets.json  readme
C++相关/基础语法/基础语法/101_HelloWorld/: main.cpp
C++相关/基础语法/基础语法/102_基础类型/102_基础类型/: CMakeLists.txt  main.cpp
C++相关/基础语法/基础语法/103_指针/: CMakeLists.txt  main.cpp
C++相关/基础语法/基础语法/104_数组/: CMakeLists.txt  main.cpp
C++相关/基础语法/基础语法/105_常用语句/: main.cpp
C++相关/基础语法/基础语法/106_函数/: main.cpp
C++相关/基础语法/基础语法/107_结构体联合体/: CMakeLists.txt
C++相关/基础语法/基础语法/108_类的基本使用/: CMakeLists.txt  demo2.cpp  demo4.cpp  demo5.cpp  demo6.cpp  main.cpp
C++相关/基础语法/基础语法/110_枚举/: CMakeLists.txt  demo1.cpp
Java相关/: pom.xml
Java相关/Demo05/: pom.xml
Spring相关/: pom.xml
Spring相关/40Demo/: pom.xml
demo_cpp/1_base_syntax/: CMakeLists.txt
demo_cpp/1_base_syntax/101_hello/: CMakeLists.txt  main.cpp
demo_cpp/1_base_syntax/102_type/: CMakeLists.txt
demo_cpp/1_base_syntax/103_pointer/: CMakeLists.txt
demo_cpp/1_base_syntax/104_array/: CMakeLists.txt
demo_cpp/1_base_syntax/105_control_state/: CMakeLists.txt
demo_cpp/1_base_syntax/106_function/: CMakeLists.txt
demo_cpp/1_base_syntax/107_struct_union/: main.cpp
demo_cpp/1_base_syntax/108_class/: CMakeLists.txt  demo3.cpp
demo_cpp/1_base_syntax/109_interface/: CMakeLists.txt  main.cpp
demo_cpp/1_base_syntax/110_enum/: CMakeLists.txt  demo1.cpp  demo2.cpp
demo_cpp/1_base_syntax/120_extern/: CMakeLists.txt  main.cpp
demo_go/2_basic/: 10_short_variable_declaration.go  11_basic_types.go  12_zero.go  13_type-conversions.go  14_type_inference.go  15_constants.go  16_numeric_constants.go  1_packages.go  2_imports.go  3_exported_names.go  4_functions.go  5_functions_continue.go  6_multiple_result.go  7_named_result.go  8_variables.go  9_variable_with_initializers.go
demo_go/3_flowcontrol/: 10_switch_evaluation_order.go  11_switch_with_no_condition.go  12_defer.go  13_defer_multe.go  1_for.go  2_for_continued.go  3_for_is_gos_while.go  4_foreve.go  5_if.go  6_if_with_a_short_statement.go  7_if_and_else.go  8_exercise_loops_and_functions.go  9_switch.go
demo_go/4_moretypes/: 1_pointers.go  2_structs.go  3_struct_fields.go  4_struct_pointers.go  5_struct_literals.go  6_test.go  (+2 more)
设计模式/: .gitignore  CMakeLists.txt  README.md
设计模式/AbstractFactory/: AbstractFactory.pro  CMakeLists.txt  main.cpp
设计模式/AbstractFactory/product/: BigChipsImpl.h  LittleChipsImpl.h  StrawberryIceCreamImpl.hpp  VanillaIceCreamImpl.hpp
设计模式/Adapter/: CMakeLists.txt  IceCreamFacadeClassAdapter.h  IceCreamFacadeObjectAdapter.h  main.cpp
设计模式/Adapter/sdk/: IceCreamFacade.hpp
设计模式/Bridge/: BrandImpl.hpp  CMakeLists.txt  IceCreamImpl.hpp  main.cpp
设计模式/Builder/NormalBuilder/: Builder.h  CMakeLists.txt  ChocolateCakeBuilder.h  Director.h  IceCreamCake.h  main.cpp
设计模式/Builder/SimpleBuilder/: CMakeLists.txt  IceCreamCake.h
设计模式/Command/: CMakeLists.txt  Command.h  IceFactoryReceiver.h  Invoker.h  StrawberryCommand.h  VanillalceCommand.h  main.cpp
设计模式/Component/: CMakeLists.txt  Component.h  Composite.h  Leaf.h  main.cpp
设计模式/Decorator/: CMakeLists.txt  IceCreamDecorator.h  NutIceCreamDecorator.h  StrawberryIceCreamImpl.h  main.cpp
设计模式/Facade/: CMakeLists.txt  Facade.pro  IceCreamFactoryFacade.hpp  StrawberryIceCreamImpl.hpp  VanillaIceCreamFactory.hpp  VanillaIceCreamImpl.hpp  main.cpp
设计模式/FactoryMethod/: CMakeLists.txt  FactoryMethod.pro  StrawberryIceCreamFactory.hpp  StrawberryIceCreamImpl.hpp  VanillaIceCreamImpl.hpp  main.cpp
设计模式/Flyweight/: CMakeLists.txt  Flyweight.pro  FlyweightFactory.h
设计模式/Flyweight/Strategy/: Chips_freeImpl.h  IceCream_halfFareImpl.h
设计模式/Interpreter/: AbstractExpression.h  CMakeLists.txt  Context.h  ImgExpression.h  PhoneExpression.h  PlusOperation.h  ValueExpression.h  WeblinkExpression.h  main.cpp
设计模式/Iterator/: Aggregate.h  CMakeLists.txt  ConcreteAggregate.h  ConcreteIterator.h  Iterator.h  main.cpp
设计模式/Mediator/: Collegue.h  ConcreteColleague.h  ERPMediator.h  Mediator.h  main.cpp
设计模式/Memento/: CMakeLists.txt  CareTaker.h  IceCream.h  IceFactory.h  IceFactoryOriginator.h  Memento.h  Originator.h  main.cpp
设计模式/Observer/: AddObServer.h  CMakeLists.txt  MarketingDepartment.h  ProductDepartment.h  Subject.h  main.cpp
设计模式/Prototype/: CMakeLists.txt  IceCreamInterface.h  Prototype.pro  StrawberryIceCreamImpl.hpp  VanillaIceCreamImpl.hpp  main.cpp
设计模式/Proxy/: CMakeLists.txt  main.cpp
设计模式/SimpleFactory/: CMakeLists.txt  SimpleFactory.pro  StrawberryIceCreamImpl.hpp  VanillaIceCreamImpl.hpp
设计模式/Singleton/: CMakeLists.txt  Singleton.pro  main.cpp
设计模式/Singleton/Factory/: IceCreamFactoryInterface.h
设计模式/Singleton/IceCream/: IceCreamInterface.h  StrawberryIceCreamImpl.hpp  VanillaIceCreamImpl.hpp
设计模式/Singleton/Singleton/: EagerSingletonFactoryFacade.hpp  LazySingletonFactoryFacade.hpp
设计模式/State/: BoxIceCreamState.h  CMakeLists.txt  IceCreamState.h  ProductContext.h  State.h  main.cpp
设计模式/Strategy/: CMakeLists.txt  Chips_freeImpl.h  Strategy.pro  main.cpp
设计模式/Template/: CMakeLists.txt  Template.pro  icecream.h  strawberryfactory.h  vanillafactory.h
设计模式/Visitor/: CMakeLists.txt  ConcretaPart.h  ConcreteVisitor.h  IceCream.h  IceCreamPart.h  Visitor.h  main.cpp
设计模式/类图/: 设计模式.drawio
领域模型/: pom.xml
(+137 files in other folders)
